--- a/Secret of Castle/Game.xaml
+++ b/Secret of Castle/Game.xaml
@@ -6,9 +6,12 @@
         xmlns:local="clr-namespace:Secret_of_Castle"
         mc:Ignorable="d"
         Title="Secret Of Castle Game" Height="{DynamicResource {x:Static SystemParameters.FullPrimaryScreenWidthKey}}" Width="{DynamicResource {x:Static SystemParameters.FullPrimaryScreenWidthKey}}"
-        WindowState="Maximized" WindowStartupLocation="CenterScreen" WindowStyle="None" ResizeMode = "NoResize" Icon="/Icon.jpeg">
-    <Grid>
-        <Image HorizontalAlignment="Left" Height="486" Margin="458,258,0,0" VerticalAlignment="Top" Width="607" Source="/Player.png"/>
+        WindowState="Maximized" WindowStartupLocation="CenterScreen" WindowStyle="None" ResizeMode = "NoResize" Icon="/Icon.jpeg" KeyDown="Game1_KeyDown">
+    <Grid x:Name="Game_grid">
+        <Grid.Background>
+            <ImageBrush ImageSource="/_815ec1da-917b-4f0f-a757-5f725b962ccf.jpeg"/>
+        </Grid.Background>
+        <Image x:Name="rect1" HorizontalAlignment="Left" Height="272" Margin="117,880,0,0" VerticalAlignment="Top" Width="254" Source="/Player.png"/>
 
     </Grid>
 </Window>
