--- a/Secret of Castle/MainWindow.xaml
+++ b/Secret of Castle/MainWindow.xaml
@@ -8,7 +8,11 @@
         Title="Secret of Castle" Height="{DynamicResource {x:Static SystemParameters.FullPrimaryScreenWidthKey}}" Width="{DynamicResource {x:Static SystemParameters.FullPrimaryScreenWidthKey}}"
         WindowState="Maximized" WindowStartupLocation="CenterScreen" WindowStyle="None" ResizeMode = "NoResize" Icon="/Icon.jpeg" >
     <Grid Cursor="">
-        <Image x:Name="background" HorizontalAlignment="Left" Height="1645" VerticalAlignment="Center" Width="1668" Cursor="No" Source="/castle_1.jpeg" Stretch="UniformToFill" Margin="-9,0,0,0"/>
+        <Image x:Name="background" HorizontalAlignment="Left" Height="1645" VerticalAlignment="Center" Width="1668" Cursor="No" Source="/castle_1.jpeg" Stretch="UniformToFill" Margin="-9,0,0,0">
+            <Image.OpacityMask>
+                <ImageBrush ImageSource="/_b47ee9b5-c19f-4b67-990e-a9f857cfd794 (1).jpeg"/>
+            </Image.OpacityMask>
+        </Image>
         <Button x:Name="Button_Play" Content="Играть" HorizontalAlignment="Center" Height="114" Margin="0,281,0,0" VerticalAlignment="Top" Width="270
                 " MouseEnter="Button_Play_MouseEnter" MouseLeave="Button_Play_MouseLeave" BorderBrush="{x:Null}" FontFamily="Arial" FontWeight="Bold" FontSize="36" Click="Button_Play_Click">
         </Button>
