--- a/Secret of Castle/Settings.xaml
+++ b/Secret of Castle/Settings.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Secret_of_Castle"
         mc:Ignorable="d"
-        Title="Settings" Height="500" Width="500" ResizeMode="NoResize" WindowStartupLocation="CenterScreen" Opacity="1.0" WindowStyle="None">
+        Title="Settings" Height="500" Width="500" ResizeMode="NoResize" WindowStartupLocation="CenterScreen" WindowStyle="None">
     <Grid x:Name="Settings_GRID" Background="#FF195690">
         <Button x:Name="Exit_Settings" Content="Выйти" HorizontalAlignment="Center" Margin="0,429,0,0" VerticalAlignment="Top" Width="186" Height="38" Click="Exit_Settings_Click"/>
 
