--- a/Secret of Castle/MainWindow.xaml
+++ b/Secret of Castle/MainWindow.xaml
@@ -5,24 +5,21 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Secret_of_Castle"
         mc:Ignorable="d"
-        Title="Secret of Castle" Height="{DynamicResource {x:Static SystemParameters.FullPrimaryScreenWidthKey}}" Width="{DynamicResource {x:Static SystemParameters.FullPrimaryScreenWidthKey}}"
-        WindowState="Maximized" WindowStartupLocation="CenterScreen" WindowStyle="None" ResizeMode = "NoResize" Icon="/Icon.jpeg" >
-    <Grid Cursor="">
-        <Image x:Name="background" HorizontalAlignment="Left" Height="1645" VerticalAlignment="Center" Width="1668" Cursor="No" Source="/castle_1.jpeg" Stretch="UniformToFill" Margin="-9,0,0,0">
-            <Image.OpacityMask>
-                <ImageBrush ImageSource="/_b47ee9b5-c19f-4b67-990e-a9f857cfd794 (1).jpeg"/>
-            </Image.OpacityMask>
-        </Image>
-        <Button x:Name="Button_Play" Content="Играть" HorizontalAlignment="Center" Height="114" Margin="0,281,0,0" VerticalAlignment="Top" Width="270
-                " MouseEnter="Button_Play_MouseEnter" MouseLeave="Button_Play_MouseLeave" BorderBrush="{x:Null}" FontFamily="Arial" FontWeight="Bold" FontSize="36" Click="Button_Play_Click">
-        </Button>
-        <Button x:Name="Button_Exit" Content="Выйти" HorizontalAlignment="Center" Height="114" Margin="0,519,0,0" VerticalAlignment="Top" Width="270
-                " Foreground="Black" BorderBrush="{x:Null}" FontFamily="Arial" FontWeight="Bold" FontSize="36" Click="Button_Exit_Click">
-        </Button>
-        <Grid HorizontalAlignment="Left" Height="1100" Margin="1779,224,0,0" VerticalAlignment="Top" Width="1776"/>
-        <ComboBox HorizontalAlignment="Left" Height="146" Margin="659,-146,0,0" VerticalAlignment="Top" Width="2"/>
-        <Grid/>
-        <Button x:Name="Settings" Content="Настройки" HorizontalAlignment="Center" Height="114" Margin="0,400,0,0" VerticalAlignment="Top" Width="270" Click="Settings_Click">
-        </Button>
+        Title="Secret of Castle" Height="1080" Width="1920
+        "
+        WindowState="Maximized" WindowStartupLocation="CenterScreen" WindowStyle="None" ResizeMode = "NoResize" Icon="/Icon.jpeg" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+    <Grid x:Name="MainMenuGRID" Cursor="">
+        <Grid.Background>
+            <ImageBrush ImageSource="/Texture/Parallax/MainMenu.png"/>
+        </Grid.Background>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="17*"/>
+            <RowDefinition Height="283*"/>
+        </Grid.RowDefinitions>
+        <Image HorizontalAlignment="Left" Height="100" Margin="510,781,0,0" VerticalAlignment="Top" Width="100" Grid.Row="5"/>
+        <Button x:Name="Button_Play" Content="Играть" HorizontalAlignment="Left" Height="114" Margin="63,336,0,0" VerticalAlignment="Top" Width="342" MouseEnter="Button_Play_MouseEnter" MouseLeave="Button_Play_MouseLeave" FontFamily="Hylia Serif Cyrillic" FontSize="65" Click="Button_Play_Click" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="White" Grid.Row="1"/>
+        <Button x:Name="Button_Exit" Content="Выйти" HorizontalAlignment="Left" Height="111" Margin="63,574,0,0" VerticalAlignment="Top" Width="342" Foreground="White" FontFamily="Hylia Serif Cyrillic" FontSize="65" Click="Button_Exit_Click" BorderBrush="{x:Null}" Background="{x:Null}" Grid.Row="1"/>
+        <Button x:Name="Settings" Content="Настройки" Height="114" Margin="63,455,0,0" VerticalAlignment="Top" Width="342" Click="Settings_Click" FontFamily="Hylia Serif Cyrillic" FontSize="65" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="White" Grid.Row="1" HorizontalAlignment="Left"/>
+        <Image x:Name="logo" HorizontalAlignment="Left" Height="119" Margin="960,52,0,0" VerticalAlignment="Top" Width="891" Source="/Texture/UI/logo.png" Grid.Row="1"/>
     </Grid>
 </Window>
