--- a/Secret of Castle/MainWindow.xaml
+++ b/Secret of Castle/MainWindow.xaml
@@ -7,19 +7,28 @@
         mc:Ignorable="d"
         Title="Secret of Castle" Height="1080" Width="1920
         "
-        WindowState="Maximized" WindowStartupLocation="CenterScreen" WindowStyle="None" ResizeMode = "NoResize" Icon="/Icon.jpeg" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+        WindowState="Maximized" WindowStartupLocation="CenterScreen" WindowStyle="None" ResizeMode = "NoResize" Icon="/Icon.jpeg" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" MouseMove="Menu_MouseMove">
     <Grid x:Name="MainMenuGRID" Cursor="">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="14*"/>
+            <ColumnDefinition Width="580*"/>
+            <ColumnDefinition Width="1243*"/>
+            <ColumnDefinition Width="83*"/>
+        </Grid.ColumnDefinitions>
         <Grid.Background>
             <ImageBrush ImageSource="/Texture/Parallax/MainMenu.png"/>
         </Grid.Background>
         <Grid.RowDefinitions>
-            <RowDefinition Height="17*"/>
-            <RowDefinition Height="283*"/>
+            <RowDefinition Height="61*"/>
+            <RowDefinition Height="284*"/>
+            <RowDefinition Height="131*"/>
+            <RowDefinition Height="149*"/>
+            <RowDefinition Height="455*"/>
         </Grid.RowDefinitions>
-        <Image HorizontalAlignment="Left" Height="100" Margin="510,781,0,0" VerticalAlignment="Top" Width="100" Grid.Row="5"/>
-        <Button x:Name="Button_Play" Content="Играть" HorizontalAlignment="Left" Height="114" Margin="63,336,0,0" VerticalAlignment="Top" Width="342" MouseEnter="Button_Play_MouseEnter" MouseLeave="Button_Play_MouseLeave" FontFamily="Hylia Serif Cyrillic" FontSize="65" Click="Button_Play_Click" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="White" Grid.Row="1"/>
-        <Button x:Name="Button_Exit" Content="Выйти" HorizontalAlignment="Left" Height="111" Margin="63,574,0,0" VerticalAlignment="Top" Width="342" Foreground="White" FontFamily="Hylia Serif Cyrillic" FontSize="65" Click="Button_Exit_Click" BorderBrush="{x:Null}" Background="{x:Null}" Grid.Row="1"/>
-        <Button x:Name="Settings" Content="Настройки" Height="114" Margin="63,455,0,0" VerticalAlignment="Top" Width="342" Click="Settings_Click" FontFamily="Hylia Serif Cyrillic" FontSize="65" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="White" Grid.Row="1" HorizontalAlignment="Left"/>
-        <Image x:Name="logo" HorizontalAlignment="Left" Height="119" Margin="960,52,0,0" VerticalAlignment="Top" Width="891" Source="/Texture/UI/logo.png" Grid.Row="1"/>
+        <Image HorizontalAlignment="Left" Height="100" Margin="140,231,0,0" VerticalAlignment="Top" Width="100" Grid.Row="4" Grid.Column="2"/>
+        <Button x:Name="Button_Play" Content="Играть" Margin="36,10,0,7" MouseEnter="Button_Play_MouseEnter" MouseLeave="Button_Play_MouseLeave" FontFamily="Hylia Serif Cyrillic" FontSize="65" Click="Button_Play_Click" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="White" Grid.Row="2" HorizontalAlignment="Left" Width="342" Grid.Column="1"/>
+        <Button x:Name="Button_Exit" Content="Выйти" HorizontalAlignment="Left" Height="111" Margin="36,26,0,0" VerticalAlignment="Top" Width="342" Foreground="White" FontFamily="Hylia Serif Cyrillic" FontSize="65" Click="Button_Exit_Click" BorderBrush="{x:Null}" Background="{x:Null}" Grid.Row="4" Grid.Column="1"/>
+        <Button x:Name="Settings" Content="Настройки" Height="114" VerticalAlignment="Center" Width="342" Click="Settings_Click" FontFamily="Hylia Serif Cyrillic" FontSize="65" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="White" Grid.Row="3" HorizontalAlignment="Left" Grid.Column="1" Margin="36,0,0,0"/>
+        <Image x:Name="logo" Height="119" Margin="566,49,10,0" VerticalAlignment="Top" Source="/Texture/UI/logo.png" Grid.Row="1" Grid.Column="2"/>
     </Grid>
 </Window>
