--- a/Secret of Castle/MainWindow.xaml
+++ b/Secret of Castle/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Secret_of_Castle"
         mc:Ignorable="d"
-        Title="Secret of Castle" Height="1080" Width="1920
+        Title="Secret of Castle" Height="720" Width="1280
         "
         WindowState="Maximized" WindowStartupLocation="CenterScreen" WindowStyle="None" ResizeMode = "NoResize" Icon="/Icon.jpeg" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" MouseMove="Menu_MouseMove">
     <Grid x:Name="MainMenuGRID" Cursor="">
@@ -28,7 +28,7 @@
         <Image HorizontalAlignment="Left" Height="100" Margin="140,231,0,0" VerticalAlignment="Top" Width="100" Grid.Row="4" Grid.Column="2"/>
         <Button x:Name="Button_Play" Content="Играть" Margin="36,10,0,7" MouseEnter="Button_Play_MouseEnter" MouseLeave="Button_Play_MouseLeave" FontFamily="Hylia Serif Cyrillic" FontSize="65" Click="Button_Play_Click" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="White" Grid.Row="2" HorizontalAlignment="Left" Width="342" Grid.Column="1"/>
         <Button x:Name="Button_Exit" Content="Выйти" HorizontalAlignment="Left" Height="111" Margin="36,26,0,0" VerticalAlignment="Top" Width="342" Foreground="White" FontFamily="Hylia Serif Cyrillic" FontSize="65" Click="Button_Exit_Click" BorderBrush="{x:Null}" Background="{x:Null}" Grid.Row="4" Grid.Column="1"/>
-        <Button x:Name="Settings" Content="Настройки" Height="114" VerticalAlignment="Center" Width="342" Click="Settings_Click" FontFamily="Hylia Serif Cyrillic" FontSize="65" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="White" Grid.Row="3" HorizontalAlignment="Left" Grid.Column="1" Margin="36,0,0,0"/>
+        <Button x:Name="Settings" Content="Настройки" Height="114" VerticalAlignment="Top" Width="342" Click="Settings_Click" FontFamily="Hylia Serif Cyrillic" FontSize="65" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="White" Grid.Row="3" HorizontalAlignment="Left" Grid.Column="1" Margin="35,18,0,0" Grid.RowSpan="2"/>
         <Image x:Name="logo" Height="119" Margin="566,49,10,0" VerticalAlignment="Top" Source="/Texture/UI/logo.png" Grid.Row="1" Grid.Column="2"/>
     </Grid>
 </Window>
