--- a/Secret of Castle/MainWindow.xaml
+++ b/Secret of Castle/MainWindow.xaml
@@ -5,8 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Secret_of_Castle"
         mc:Ignorable="d"
-        Title="Secret of Castle" Height="720" Width="1280
-        "
+        Title="Secret of Castle" Height="720" Width="1280"
         WindowState="Maximized" WindowStartupLocation="CenterScreen" WindowStyle="None" ResizeMode = "NoResize" Icon="/Icon.jpeg" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" MouseMove="Menu_MouseMove">
     <Grid x:Name="MainMenuGRID" Cursor="">
         <Grid.ColumnDefinitions>
