--- a/Secret of Castle/Settings.xaml
+++ b/Secret of Castle/Settings.xaml
@@ -8,6 +8,7 @@
         Title="Settings" Height="500" Width="500" ResizeMode="NoResize" WindowStartupLocation="CenterScreen" WindowStyle="None">
     <Grid x:Name="Settings_GRID" Background="#FF195690">
         <Button x:Name="Exit_Settings" Content="Выйти" HorizontalAlignment="Center" Margin="0,429,0,0" VerticalAlignment="Top" Width="186" Height="38" Click="Exit_Settings_Click"/>
+        <RadioButton Content="RadioButton" HorizontalAlignment="Left" Margin="132,95,0,0" VerticalAlignment="Top" Height="28" Width="195" Checked="RadioButton_Checked"/>
 
     </Grid>
 </Window>
