--- a/Secret of Castle/Game.xaml
+++ b/Secret of Castle/Game.xaml
@@ -1,18 +1,14 @@
 ﻿<Window x:Name="Game1" x:Class="Secret_of_Castle.Game" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:local="clr-namespace:Secret_of_Castle"
         mc:Ignorable="d" Title="Secret Of Castle Game" Height="1080" Width="1920" WindowState="Maximized" WindowStyle="None"  Icon="/Icon.jpeg" KeyDown="Game1_KeyDown">
     <Viewbox Stretch="Fill">
-        <Canvas x:Name="CanvasGame" Focusable="True" KeyUp="kbup" KeyDown="kbdown" Height="1080" Width="1920">
-        <Canvas.Background>
-            <ImageBrush ImageSource="/Texture/background/Level/game_background_1.png"/>
-        </Canvas.Background>
-        <Rectangle x:Name="Portal" Height="172" Canvas.Left="1646" Stroke="Black" Canvas.Top="834" Width="219" HorizontalAlignment="Left" VerticalAlignment="Top" Fill="Black"/>
-        <Rectangle x:Name="Player" Canvas.Left="590" Canvas.Top="285"  Width="100" Height="150">
-            <Rectangle.Fill>
-                <ImageBrush ImageSource="/Player.png"/>
-            </Rectangle.Fill>
-        </Rectangle>
-        <Image Height="100" Canvas.Left="1551" Source="/Texture/UI/Game/HP/icon_hp.png" Stretch="Fill" Canvas.Top="16" Width="100" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-        <ProgressBar x:Name="hp_bar" Height="18" Canvas.Left="1664" Canvas.Top="57" Width="192" HorizontalAlignment="Left" VerticalAlignment="Center" Value="100" BorderBrush="{x:Null}" Background="#FFA19D9D" Foreground="#FF6BFF00"/>
-    </Canvas>
+        <Canvas x:Name="CanvasGame"  KeyUp="kbup" KeyDown="kbdown" Height="1080" Width="1920" Focusable="True">
+            <Canvas.Background>
+                <ImageBrush ImageSource="/Texture/background/Level/game_background_1.png"/>
+            </Canvas.Background>
+            <Rectangle x:Name="Portal" Height="172" Canvas.Left="1646" Stroke="Black" Canvas.Top="834" Width="219" HorizontalAlignment="Left" VerticalAlignment="Top" Fill="Black"/>
+            <Image Height="100" Canvas.Left="1551" Source="/Texture/UI/Game/HP/icon_hp.png" Stretch="Fill" Canvas.Top="16" Width="100" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+            <ProgressBar x:Name="hp_bar" Height="18" Canvas.Left="1664" Canvas.Top="57" Width="192" HorizontalAlignment="Left" VerticalAlignment="Center" Value="100" BorderBrush="{x:Null}" Background="#FFA19D9D" Foreground="#FF6BFF00"/>
+            <Image x:Name="player" Height="230" Canvas.Left="112" Canvas.Top="355" Width="154" Source="/Player.png"/>
+        </Canvas>
     </Viewbox>
 </Window>
