--- a/Secret of Castle/MainWindow.xaml
+++ b/Secret of Castle/MainWindow.xaml
@@ -7,7 +7,12 @@
         mc:Ignorable="d"
         Title="Secret of Castle" Height="1080" Width="1920" WindowState="Maximized" WindowStartupLocation="CenterScreen" WindowStyle="None" ResizeMode = "NoResize" Icon="/Icon.jpeg" MouseMove="Menu_MouseMove">
     <Grid x:Name="MainMenuGRID" Cursor="">
-        <Grid.ColumnDefinitions> <ColumnDefinition Width="14*"/> <ColumnDefinition Width="580*"/> <ColumnDefinition Width="1243*"/> <ColumnDefinition Width="83*"/> </Grid.ColumnDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="14*"/>
+            <ColumnDefinition Width="580*"/>
+            <ColumnDefinition Width="1243*"/>
+            <ColumnDefinition Width="83*"/>
+        </Grid.ColumnDefinitions>
         <Grid.Background>
             <ImageBrush ImageSource="/Texture/Parallax/MainMenu.png"/>
         </Grid.Background>
@@ -19,9 +24,9 @@
             <RowDefinition Height="455*"/>
         </Grid.RowDefinitions>
         <Image HorizontalAlignment="Left" Height="100" Margin="140,231,0,0" VerticalAlignment="Top" Width="100" Grid.Row="4" Grid.Column="2"/>
-        <Button x:Name="Button_Play" Content="Играть" Margin="36,10,0,7" MouseEnter="Button_Play_MouseEnter" MouseLeave="Button_Play_MouseLeave" FontFamily="pack://application:,,,/font/Ru.otf" FontSize="65" Click="Button_Play_Click" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="White" Grid.Row="2" HorizontalAlignment="Left" Width="342" Grid.Column="1"/>
-            <Button x:Name="Button_Exit" Content="Выйти" HorizontalAlignment="Left" Height="111" Margin="36,26,0,0" VerticalAlignment="Top" Width="342" Foreground="White" FontFamily="{StaticResource HyliaSerifCyr}" FontSize="65" Click="Button_Exit_Click" BorderBrush="{x:Null}" Background="{x:Null}" Grid.Row="4" Grid.Column="1"/>
-        <Button x:Name="Settings" Content="Настройки" Height="114" VerticalAlignment="Top" Width="342" Click="Settings_Click" FontFamily="{StaticResource HyliaSerifCyr }" FontSize="65" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="White" Grid.Row="3" HorizontalAlignment="Left" Grid.Column="1" Margin="35,18,0,0" Grid.RowSpan="2"/>
+        <Button x:Name="Button_Play" Content="Играть" Margin="36,10,0,7" MouseEnter="Button_Play_MouseEnter" MouseLeave="Button_Play_MouseLeave" FontFamily="Hylia Serif Cyrillic" FontSize="65" Click="Button_Play_Click" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="White" Grid.Row="2" HorizontalAlignment="Left" Width="342" Grid.Column="1"/>
+        <Button x:Name="Button_Exit" Content="Выйти" HorizontalAlignment="Left" Height="111" Margin="36,26,0,0" VerticalAlignment="Top" Width="342" Foreground="White" FontFamily="Hylia Serif Cyrillic" FontSize="65" Click="Button_Exit_Click" BorderBrush="{x:Null}" Background="{x:Null}" Grid.Row="4" Grid.Column="1"/>
+        <Button x:Name="Settings" Content="Настройки" Height="114" VerticalAlignment="Top" Width="342" Click="Settings_Click" FontFamily="Hylia Serif Cyrillic" FontSize="65" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="White" Grid.Row="3" HorizontalAlignment="Left" Grid.Column="1" Margin="35,18,0,0" Grid.RowSpan="2"/>
         <Image x:Name="logo" Height="158" Margin="386,10,10,0" VerticalAlignment="Top" Source="/Texture/UI/logo.png" Grid.Row="1" Grid.Column="2"/>
     </Grid>
 </Window>
