--- a/Secret of Castle/Game.xaml
+++ b/Secret of Castle/Game.xaml
@@ -8,7 +8,8 @@
             <Rectangle x:Name="Portal" Height="172" Canvas.Left="1646" Stroke="Black" Canvas.Top="834" Width="219" HorizontalAlignment="Left" VerticalAlignment="Top" Fill="Black"/>
             <Image Height="100" Canvas.Left="1551" Source="/Texture/UI/Game/HP/icon_hp.png" Stretch="Fill" Canvas.Top="16" Width="100" HorizontalAlignment="Left" VerticalAlignment="Top"/>
             <ProgressBar x:Name="hp_bar" Height="18" Canvas.Left="1664" Canvas.Top="57" Width="192" HorizontalAlignment="Left" VerticalAlignment="Center" Value="100" BorderBrush="{x:Null}" Background="#FFA19D9D" Foreground="#FF6BFF00"/>
-            <Image x:Name="player" Height="230" Canvas.Left="112" Canvas.Top="355" Width="154" Source="/Player.png"/>
+            <Image x:Name="player" Height="230" Canvas.Left="131" Canvas.Top="425" Width="154" Source="/Player.png" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+            <Image x:Name="c1" Height="216" Canvas.Left="729" Source="/Texture/Objects/Furniture/Table.png" Stretch="Fill" Canvas.Top="402" Width="330" Tag="objects"/>
         </Canvas>
     </Viewbox>
 </Window>
