Добавил 2 вида для зомби, исправил вид персонажа при движении ( вправо/влево, сделал переход на другой уровень, дорабатываю коллизию, дорабатываю строку здоровья

--- a/Secret of Castle/App.xaml
+++ b/Secret of Castle/App.xaml
@@ -3,8 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:Secret_of_Castle"
              StartupUri="MainWindow.xaml">
-    
     <Application.Resources>
-        
+        <FontFamily x:Key="CustomFont">pack://application:,,,/font/en.ttf</FontFamily>
     </Application.Resources>
 </Application>
