--- a/Secret of Castle/Game.xaml
+++ b/Secret of Castle/Game.xaml
@@ -1,5 +1,5 @@
 ﻿<Window x:Name="Game1" x:Class="Secret_of_Castle.Game" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:local="clr-namespace:Secret_of_Castle"
-        mc:Ignorable="d" Title="Secret Of Castle Game" Height="1080" Width="1920" WindowState="Maximized" WindowStyle="None"  Icon="/Icon.jpeg" KeyDown="Game1_KeyDown ">
+        mc:Ignorable="d" Title="Secret Of Castle Game" Height="1080" Width="1920" WindowState="Maximized" WindowStyle="None"  Icon="/Icon.jpeg" KeyDown="Game1_KeyDown">
     <Viewbox Stretch="Fill">
         <Canvas x:Name="CanvasGame"  KeyUp="kbup" KeyDown="kbdown" Height="1080" Width="1920" Focusable="True">
             <Canvas.Background>
@@ -9,7 +9,7 @@
             <Image Height="100" Canvas.Left="1551" Source="/Texture/UI/Game/HP/icon_hp.png" Stretch="Fill" Canvas.Top="16" Width="100" HorizontalAlignment="Left" VerticalAlignment="Top"/>
             <ProgressBar x:Name="hp_bar" Height="18" Canvas.Left="1664" Canvas.Top="57" Width="192" HorizontalAlignment="Left" VerticalAlignment="Center" Value="100" BorderBrush="{x:Null}" Background="#FFA19D9D" Foreground="#FF6BFF00"/>
             <Image x:Name="player" Height="174" Canvas.Left="149" Canvas.Top="466" Width="165" Source="/Texture/Mob/Player/player_stand.png" HorizontalAlignment="Left" VerticalAlignment="Center" Stretch="Fill" OpacityMask="White"/>
-            <Image x:Name="obj" Height="216" Canvas.Left="795" Source="/Texture/Objects/Furniture/Table.png" Stretch="Fill" Canvas.Top="402" Width="330" Tag="objects" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+            <Image x:Name="objc" Height="216" Canvas.Left="795" Source="/Texture/Objects/Furniture/Table.png" Stretch="Fill" Canvas.Top="402" Width="330" Tag="objects" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         </Canvas>
     </Viewbox>
 </Window>
