--- a/Secret of Castle/Level/level2.xaml
+++ b/Secret of Castle/Level/level2.xaml
@@ -11,8 +11,12 @@
                 <ImageBrush ImageSource="/Texture/background/Level/game_background_1.png"/>
             </Canvas.Background>
             <Image Height="100" Canvas.Left="1551" Source="/Texture/UI/Game/HP/icon_hp.png" Stretch="Fill" Canvas.Top="16" Width="100" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-            <ProgressBar x:Name="hp_bar" Height="18" Canvas.Left="1664" Canvas.Top="57" Width="192" HorizontalAlignment="Left" VerticalAlignment="Center" Value="100" BorderBrush="{x:Null}" Background="#FFA19D9D" Foreground="#FF6BFF00"/>
-            <Image x:Name="player" Height="174" Canvas.Left="149" Canvas.Top="466" Width="165" Source="/Texture/Mob/Player/player_stand.png" HorizontalAlignment="Left" VerticalAlignment="Center" Stretch="Fill" OpacityMask="White"/>
+            <ProgressBar x:Name="hp_bar" Height="18" Canvas.Left="1664" Canvas.Top="57" Width="192" HorizontalAlignment="Left" VerticalAlignment="Center" Value="100" Background="#FFA19D9D" Foreground="#FF6BFF00"/>
+            <Image x:Name="player" Height="174" Canvas.Left="149" Canvas.Top="466" Width="165" Source="/Texture/Mob/Player/player_stand.png" HorizontalAlignment="Left" VerticalAlignment="Center" Stretch="Fill">
+                <Image.OpacityMask>
+                    <ImageBrush ImageSource="/Texture/Mob/Player/player_stand.png"/>
+                </Image.OpacityMask>
+            </Image>
         </Canvas>
     </Viewbox>
 </Window>
