--- a/Secret of Castle/Game.xaml
+++ b/Secret of Castle/Game.xaml
@@ -8,7 +8,7 @@
             <Rectangle x:Name="Portal" Height="172" Canvas.Left="1646" Stroke="Black" Canvas.Top="834" Width="219" HorizontalAlignment="Left" VerticalAlignment="Top" Fill="Black"/>
             <Image Height="100" Canvas.Left="1551" Source="/Texture/UI/Game/HP/icon_hp.png" Stretch="Fill" Canvas.Top="16" Width="100" HorizontalAlignment="Left" VerticalAlignment="Top"/>
             <ProgressBar x:Name="hp_bar" Height="18" Canvas.Left="1664" Canvas.Top="57" Width="192" HorizontalAlignment="Left" VerticalAlignment="Center" Value="100" BorderBrush="{x:Null}" Background="#FFA19D9D" Foreground="#FF6BFF00"/>
-            <Image x:Name="player" Height="174" Canvas.Left="149" Canvas.Top="466" Width="165" Source="/Texture/Mob/Player/player_stand.png" HorizontalAlignment="Left" VerticalAlignment="Center" Stretch="Fill" OpacityMask="White"/>
+            <Image x:Name="player" Height="174" Canvas.Left="149" Canvas.Top="466" Width="165" Source="/Texture/Mob/Player/player_move_animation/Right/PlayerMoveRightAnimation1.png" HorizontalAlignment="Left" VerticalAlignment="Center" Stretch="Fill"/>
             <Image x:Name="objc" Height="216" Canvas.Left="795" Source="/Texture/Objects/Furniture/Table.png" Stretch="Fill" Canvas.Top="402" Width="330" Tag="objects" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         </Canvas>
     </Viewbox>
