--- a/Secret of Castle/PauseWindow.xaml
+++ b/Secret of Castle/PauseWindow.xaml
@@ -1,15 +1,14 @@
-﻿<Window x:Class="Secret_of_Castle.Pause"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Secret_of_Castle"
+﻿<Window x:Name="PauseW" x:Class="Secret_of_Castle.Pause" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:local="clr-namespace:Secret_of_Castle"
         mc:Ignorable="d"
-        Title="Pause" Height="500" Width="500" ResizeMode="NoResize" WindowStartupLocation="CenterScreen" WindowStyle="None">
-    <Grid>
-        <Button x:Name="Settings_Button" Content="Настройки" HorizontalAlignment="Center" VerticalAlignment="Center" Height="40" Width="140" Click="Settings_Button_Click"/>
-        <Button x:Name="Play_Button" Content="Продолжить" HorizontalAlignment="Center" Margin="0,155,0,0" VerticalAlignment="Top" Height="40" Width="140" Click="Play_Button_Click"/>
-        <Button x:Name="Exit_Button" Content="Выйти" HorizontalAlignment="Center" Margin="0,302,0,0" VerticalAlignment="Top" Height="40" Width="140" Click="Exit_Button_Click"/>
-
-    </Grid>
+        Title="Pause" Height="1080" Width="1920" WindowState="Maximized" WindowStartupLocation="CenterScreen" WindowStyle="None" ResizeMode = "NoResize">
+    <Viewbox Stretch="Fill">
+        <Canvas x:Name="PauseCanvas" Height="1080" Width="1920">
+            <Canvas.Background>
+                <ImageBrush ImageSource="/Texture/UI/Menu_background.png"/>
+            </Canvas.Background>
+            <Button x:Name="Settings_Button" Content="Настройки" Width="458" Click="Settings_Button_Click" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="White" FontSize="55" FontWeight="Bold" Height="112" Canvas.Left="762" Canvas.Top="530"/>
+            <Button x:Name="Play_Button" Content="Продолжить" HorizontalAlignment="Left" Margin="876,330,0,0" VerticalAlignment="Top" Height="77" Width="220" Click="Play_Button_Click" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="White" FontSize="27" FontWeight="Bold"/>
+            <Button x:Name="Exit_Button" Content="Выйти" HorizontalAlignment="Left" Margin="860,667,0,0" VerticalAlignment="Top" Height="83" Width="256" Click="Exit_Button_Click" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="White" FontSize="52" FontWeight="Bold"/>
+        </Canvas>
+    </Viewbox>
 </Window>
