--- a/Secret of Castle/Settings.xaml
+++ b/Secret of Castle/Settings.xaml
@@ -8,7 +8,10 @@
         Title="Settings" Height="500" Width="500" ResizeMode="NoResize" WindowStartupLocation="CenterScreen" WindowStyle="None">
     <Grid x:Name="Settings_GRID" Background="#FF195690">
         <Button x:Name="Exit_Settings" Content="Выйти" HorizontalAlignment="Center" Margin="0,429,0,0" VerticalAlignment="Top" Width="186" Height="38" Click="Exit_Settings_Click"/>
-        <RadioButton Content="RadioButton" HorizontalAlignment="Left" Margin="132,95,0,0" VerticalAlignment="Top" Height="28" Width="195" Checked="RadioButton_Checked"/>
+        <Button x:Name="DifficultLite" Content="Легкая" Tag="Lite" HorizontalAlignment="Left" Margin="51,46,0,0" VerticalAlignment="Top" Height="34" Width="82" Click="DifficultLite_Click"/>
+        <Button x:Name="DifficultMedium" Content="Нормальная" Tag="Medium" HorizontalAlignment="Center" Height="34" Margin="0,46,0,0" VerticalAlignment="Top" Width="82" Click="DifficultMedium_Click"/>
+        <Button x:Name="DifficultHard" Content="Сложная" Tag="Hard" HorizontalAlignment="Left" Height="34" Margin="359,46,0,0" VerticalAlignment="Top" Width="82" Click="DifficultHard_Click"/>
+        <Label x:Name="Difficultlb" Content="Label" HorizontalAlignment="Center" Margin="0,10,0,0" VerticalAlignment="Top" Width="152"/>
 
     </Grid>
 </Window>
