--- a/Secret of Castle/Settings.xaml
+++ b/Secret of Castle/Settings.xaml
@@ -5,13 +5,17 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Secret_of_Castle"
         mc:Ignorable="d"
-        Title="Settings" Height="500" Width="500" ResizeMode="NoResize" WindowStartupLocation="CenterScreen" WindowStyle="None">
-    <Grid x:Name="Settings_GRID" Background="#FF195690">
-        <Button x:Name="Exit_Settings" Content="Выйти" HorizontalAlignment="Center" Margin="0,429,0,0" VerticalAlignment="Top" Width="186" Height="38" Click="Exit_Settings_Click"/>
-        <Button x:Name="DifficultLite" Content="Легкая" Tag="Lite" HorizontalAlignment="Left" Margin="51,46,0,0" VerticalAlignment="Top" Height="34" Width="82" Click="DifficultLite_Click"/>
-        <Button x:Name="DifficultMedium" Content="Нормальная" Tag="Medium" HorizontalAlignment="Center" Height="34" Margin="0,46,0,0" VerticalAlignment="Top" Width="82" Click="DifficultMedium_Click"/>
-        <Button x:Name="DifficultHard" Content="Сложная" Tag="Hard" HorizontalAlignment="Left" Height="34" Margin="359,46,0,0" VerticalAlignment="Top" Width="82" Click="DifficultHard_Click"/>
-        <Label x:Name="Difficultlb" Content="Label" HorizontalAlignment="Center" Margin="0,10,0,0" VerticalAlignment="Top" Width="152"/>
-
-    </Grid>
+        Title="Settings" Height="1080" Width="1920" WindowState="Maximized" WindowStartupLocation="CenterScreen" WindowStyle="None" ResizeMode = "NoResize">
+    <Viewbox Stretch="Fill">
+        <Canvas x:Name="Settings_Canvas" Height="1080" Width="1920">
+            <Canvas.Background>
+                <ImageBrush ImageSource="/Texture/UI/Game/Settings_Background.png"/>
+            </Canvas.Background>
+            <Button x:Name="Exit_Settings" Content="Выйти" HorizontalAlignment="Center" VerticalAlignment="Top" Width="450" Height="57" Click="Exit_Settings_Click" Canvas.Left="766" Canvas.Top="701" BorderBrush="{x:Null}" Background="{x:Null}" Foreground="White" FontSize="28" FontWeight="Bold"/>
+            <Button x:Name="DifficultLite" Content="Легкая" Tag="Lite" HorizontalAlignment="Center" VerticalAlignment="Center" Height="58" Width="221" Click="DifficultLite_Click" Canvas.Left="657" Canvas.Top="395" Background="{x:Null}" Foreground="White" FontSize="28" FontWeight="Bold" BorderBrush="{x:Null}"/>
+            <Button x:Name="DifficultMedium" Content="Нормальная" Tag="Medium" HorizontalAlignment="Center" Height="64" VerticalAlignment="Top" Width="212" Click="DifficultMedium_Click" Canvas.Left="883" Canvas.Top="389" Background="{x:Null}" Foreground="White" FontSize="28" FontWeight="Bold" BorderBrush="{x:Null}"/>
+            <Button x:Name="DifficultHard" Content="Сложная" Tag="Hard" HorizontalAlignment="Center" Height="58" VerticalAlignment="Top" Width="215" Click="DifficultHard_Click" Canvas.Left="1100" Canvas.Top="395" Background="{x:Null}" Foreground="White" FontSize="28" FontWeight="Bold" BorderBrush="{x:Null}"/>
+            <Label x:Name="Difficultlb" Content="Label" HorizontalAlignment="Center" Margin="0,10,0,0" VerticalAlignment="Top" Width="152"/>
+        </Canvas>
+    </Viewbox>
 </Window>
